--- a/index.html
+++ b/index.html
@@ -1,1 +1,66 @@
 # braunps_skin.github.io
+<!DOCTYPE html>
+<html lang="jp">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ブラウン整形外科＆美容皮膚科</title>
+    <style>
+        body {
+            text-align: center;
+            background: linear-gradient(to right, #ffa07a, #ffdab9);
+            font-family: Arial, sans-serif;
+        }
+        .profile-img {
+            width: 150px;
+            height: auto;
+            margin: 10px 0;
+        }
+        h1 {
+            font-size: 24px;
+            margin-bottom: 5px;
+        }
+        p {
+            margin: 5px 0 15px;
+        }
+        .links-container {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 10px;
+        }
+        .link {
+            display: block;
+            width: 250px;
+            padding: 10px;
+            background-color: #007bff;
+            color: white;
+            text-decoration: none;
+            text-align: center;
+            border-radius: 10px;
+            font-size: 16px;
+        }
+        .link:hover {
+            background-color: #0056b3;
+        }
+    </style>
+</head>
+<body>
+    <h1>
+        🐻 ブラウン整形外科＆美容皮膚科 🐻
+    </h1>
+    <img src="profile.jpg" alt="プロフィル写真" class="profile-img">
+    <p>ブラウン整形外科＆美容皮膚科のSNS情報をまとめたサイトです♥</p>
+    
+    <div class="links-container">
+        <a href="https://braunps.com/jp/bbs/page.php?hid=m03_04" class="link">アクセス＆営業情報</a>
+        <a href="https://line.me/R/ti/p/@braunbmgjp" class="link" target="_blank">公式LINE友だち追加</a>
+        <a href="https://x.com/braunps_jp2" class="link">X (旧 Twitter)</a>
+        <a href="https://www.instagram.com/braunps_jp/" class="link">Instagram_整形</a>
+        <a href="https://www.instagram.com/braunskin_jp/" class="link">Instagram_皮膚</a>
+        <a href="https://ameblo.jp/braunbmgjp/" class="link">Amebaブログ</a>
+        <a href="https://www.youtube.com/@Braunpsjp_2400" class="link">Youtube</a>
+        <a href="https://www.tiktok.com/@braunpsjapan" class="link">Tiktok</a>
+    </div>
+</body>
+</html>
